Resolve "Delete of Device/Platforms/Configurations"
